@@ -66,6 +66,7 @@ Template for new versions:
 
 ## API
 - ``Filesystem::getBaseDir`` and ``Filesystem::getInstallDir`` added (and made available in Lua)
+- expand the partial implementations of ``Military::addToSquad`` and ``Military::removeFromSquad``
 
 ## Lua
 - inserting values into STL containers containing nonprimitive types is now supported
